photo page fix with misaligned images

--- a/Format.css
+++ b/Format.css
@@ -320,15 +320,16 @@ a.button1:hover{
   justify-content: center;
 }
 .firsta{
-	grid-column: 2 / 4;
+	grid-column: 3;
+	grid-row: 3;
 }
 .seconda{
-	grid-column: 1 ;
+	grid-column: 1 / span 2;
 	grid-row: 1 / span 3;
 }
 .thirda{
-	grid-column: 2 ;
-	grid-row: 2 ;
+	grid-column: 3 ;
+	grid-row: 1 ;
 }
 .fourtha{
 	grid-column: 3 ;
@@ -569,6 +570,7 @@ footer a img{
 
 	.firsta{
 		grid-column: 1 / span 3;
+		grid-row: 4;
 	}
 	.seconda{
 		grid-column: 1 ;
